apps/talos-home/blocky/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  labels:
    kubernetes.io/metadata.name: dns
