apps/talos-home/blocky/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blocky
  namespace: dns
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blocky.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain
          namespace: networking
      services:
        - name: blocky
          port: 4000
  tls:
    secretName: blocky-tls
